Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Sithabile!</title>
 </head>
 <body>
-<h1>Hello Sithable! Attemp 30 and loving it!</h1>
+<h1>Hello Sithable! Attemp 30 and loving it! Excited with the current developments. As a beginner, I was uncertain if I would understand or be able to follow the instructions as I had such a fear for coding. But after 30 attempts, with many many frustrations, deleting and re-installing, I'm happy to say that each attempt has given me courage and great pleasure to discover and learn more. I'm excited with my current developmets and very curious about the end results!</h1>
 </body>
 </html>
